syntax = "proto3";

option csharp_namespace = "monolith";

package datahoarderfs;

service NodeRegistry {
  rpc Authenticate (NodeAuthenticationRequest) returns (NodeAuthenticationReply);
  rpc Test (NodeTestRequest) returns (NodeTestReply);
  rpc UpdateStream (NodeUpdateStreamRequest) returns (NodeUpdateStreamReply);
}


message NodeAuthenticationRequest {
  string identifier = 1;
}
message NodeAuthenticationReply {
  bool status = 1;
  int32 keepAliveInterval = 2;
}


message NodeTestRequest {
  string identifier = 1;
}
message NodeTestReply {
  bool status = 1;
}


message NodeUpdateStreamRequest {
}
message NodeUpdateStreamReply {
  bool status = 1;
}
